--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 [Ll]ibrary/
+[Ll]ogs/
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
@@ -6,6 +7,7 @@
 AssetBundles*
 Assets/StreamingAssets*
 Assets/AssetStoreTools*
+Packages/packages-lock.json
 
 # Visual Studio cache directory
 .vs/
