--- a/Assets/Build Pipeline for WebGL/package.json
+++ b/Assets/Build Pipeline for WebGL/package.json
@@ -1,9 +1,16 @@
 {
-    "name": "com.luvikung.buildpipelinewebgl",
-    "displayName": "Build Pipeline for WebGL",
-    "description": "Build Pipeline for WebGL is a build tools for Unity Editor that able to manage build version by folder and able to strip javascript of mobile warning.",
-    "version": "1.0.5",
-    "unity": "2019.3",
-    "license": "MIT",
-    "dependencies": {}
+  "name": "com.luvikung.buildpipelinewebgl",
+  "displayName": "Build Pipeline for WebGL",
+  "description": "Build Pipeline for WebGL is a build tools for Unity Editor that able to manage build version by folder and able to strip javascript of mobile warning.",
+  "version": "1.0.6",
+  "unity": "2019.3",
+  "keywords": [
+    "build",
+    "pipeline",
+    "webgl",
+    "unity"
+  ],
+  "author": "Thanut Panichyotai",
+  "license": "MIT",
+  "dependencies": {}
 }
